# NeuroLabSurrogate

surrogate/: ChangeLog  Makefile.am  Makefile.in  README  all103  asprintf.c  checksurr.c  config.h.in  configure  configure.ac  dogamma  dogamma.out  edt.c  edt.h  edt_surrogate.c  eval.c  explain.c  fpu_check.c  fpu_check.h  gammafit_search.c  gammafit_search.h  gammafit_search_main.c  gammafit_search_nopin.c  gen_control.c  gen_control.h  gen_control_103_26_0.out  gen_control_main.c  getline.c  miura.c  read_array.c  read_array.h  repat.c  spikes-1-0.1.gdf  spikes-1-0.2.gdf  spikes-1-0.4.gdf  spikes-16-0.1.gdf  spikes-16-0.2.gdf  spikes-16-0.4.gdf  spikes-2-0.1.gdf  spikes-2-0.2.gdf  (+19 more)
surrogate/debian/: README  README.Debian.0  README.source  changelog  control  copyright  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst  postinst.ex  postinst.template  postinst.template.0  postrm.ex  preinst.ex  prerm.ex  rules  surrogate.cron.d.ex  surrogate.default.ex  surrogate.doc-base.EX  watch.ex
